WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
101836
[Qt] Flash-plugin starts with wrong width
https://bugs.webkit.org/show_bug.cgi?id=101836
Summary
[Qt] Flash-plugin starts with wrong width
Allan Sandfeld Jensen
Reported
2012-11-10 05:14:37 PST
On a number of pages, flash videos start with wrong width. For instance on videos on thatguywiththeglasses.com videos start with correct height but a width of 300px, where it is supposed to be 640px. The problem seems to be that for some reason initial width is 300px, and we do not allow resize events. Fortunately this specific problem can be solved by postponing the first setWindow call when we disallow setting it more than once.
Attachments
Patch
(1.38 KB, patch)
2012-11-10 06:05 PST
,
Allan Sandfeld Jensen
no flags
Details
Formatted Diff
Diff
Patch
(1.57 KB, patch)
2012-11-12 01:56 PST
,
Allan Sandfeld Jensen
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Allan Sandfeld Jensen
Comment 1
2012-11-10 06:05:05 PST
Created
attachment 173449
[details]
Patch
WebKit Review Bot
Comment 2
2012-11-10 06:10:11 PST
Attachment 173449
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCor..." exit_code: 1 Source/WebCore/ChangeLog:3: Line contains tab character. [whitespace/tab] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Allan Sandfeld Jensen
Comment 3
2012-11-12 01:56:39 PST
Created
attachment 173589
[details]
Patch
WebKit Review Bot
Comment 4
2012-11-12 06:33:55 PST
Comment on
attachment 173589
[details]
Patch Clearing flags on attachment: 173589 Committed
r134222
: <
http://trac.webkit.org/changeset/134222
>
WebKit Review Bot
Comment 5
2012-11-12 06:33:58 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug