[Qt] Flash-plugin starts with wrong width https://bugs.webkit.org/show_bug.cgi?id=101836

Patch by Allan Sandfeld Jensen <sandfeld@kde.org> on 2012-11-12
Reviewed by Simon Hausmann.

Defer the setWindow call, so that the one time it is called it will have its final size.

* plugins/PluginPackage.cpp:
(WebCore::PluginPackage::determineQuirks):

Canonical link: https://commits.webkit.org/119991@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@134222 268f45cc-cd09-0410-ab3c-d52691b4dbfc